[gd_scene load_steps=3 format=3 uid="uid://cstqcudoy2wth"]

[ext_resource type="Script" uid="uid://ckx7mw4pwh2i5" path="res://src/game_leaderboard_entry.gd" id="1_330xg"]
[ext_resource type="Texture2D" uid="uid://crexyi6rn4w80" path="res://assets/trophy.png" id="1_uub6x"]

[node name="game_leaderboard_entry" type="Button"]
clip_children = 2
clip_contents = true
custom_minimum_size = Vector2(256, 64)
script = ExtResource("1_330xg")

[node name="color_rect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.402519, 0.61306, 0.365522, 0.769)

[node name="content" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="icon" type="TextureRect" parent="content"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
grow_vertical = 2
texture = ExtResource("1_uub6x")
expand_mode = 4

[node name="label_name" type="RichTextLabel" parent="content"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 36.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[color=white]Player[/color]"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="label_place" type="RichTextLabel" parent="content"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_bottom = 20.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
text = "0th"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="label_points" type="RichTextLabel" parent="content"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -20.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
text = "0 pts"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 2
